Resetting project structures to support multi-modules

--- a/.gitignore
+++ b/.gitignore
@@ -58,21 +58,13 @@ freeline/
 freeline_project_description.json
 
 # fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
-fastlane/readme.md
+fastlane/
 
 # Version control
 vcs.xml
 
 # lint
-lint/intermediates/
-lint/generated/
-lint/outputs/
-lint/tmp/
-lint/reports/
+lint/
 
 
 # MacOS
